working on set up for tvm4

--- a/pvannuity/pvannuity-1.html
+++ b/pvannuity/pvannuity-1.html
@@ -25,9 +25,9 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
@@ -36,7 +36,7 @@
                 </div>
                 <div class="offset-5 col-4 offset-md-6">
                     <a type="button" class="hide btn"></a>
-                    <a type="button" class="btn start" href="basics-2.html">Start!</a>
+                    <a type="button" class="btn start" href="./pvannuity-2.html">Start!</a>
                 </div>
             </div>
         </div>
