--- a/pvannuity/pvannuity-27.html
+++ b/pvannuity/pvannuity-27.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 4: Annuities</title>
+    <title>TVM Annuities</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <div id="exercises4-slide14" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: Annuities</h2>
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
                     <!-- <h3 class="secondary-title">Exercises</h3> -->
                 </div>
             </div>
@@ -64,8 +64,8 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="back btn">Back</button>
-                    <button type="button" class="continue btn">Continue</button>
+                    <a type="button" class="btn" href="./pvannuity-1.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -83,7 +83,7 @@
         <div id="exercises4-slide15" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: Annuities</h2>
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
                     <!-- <h3 class="secondary-title">Exercises</h3> -->
                 </div>
             </div>
@@ -109,8 +109,8 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="back btn">Back</button>
-                    <button type="button" class="continue btn">Continue</button>
+                    <a type="button" class="btn" href="./pvannuity-1.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -127,7 +127,7 @@
         <div id="exercises4-slide16" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: Annuities</h2>
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
                     <!-- <h3 class="secondary-title">Exercises</h3> -->
                 </div>
             </div>
@@ -156,8 +156,8 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="back btn">Back</button>
-                    <button type="button" class="continue btn">Continue</button>
+                    <a type="button" class="btn" href="./pvannuity-1.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -174,7 +174,7 @@
         <div id="exercises4-slide17" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: Annuities</h2>
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
                     <!-- <h3 class="secondary-title">Exercises</h3> -->
                 </div>
             </div>
@@ -207,15 +207,11 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="back btn">Back</button>
-                    <button type="button" class="continue btn">Continue</button>
+                    <a type="button" class="btn" href="./pvannuity-1.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-1">
-                    <div class="page-number">39</div>
-                </div>
-            </div>
+
         </div>
 
 
@@ -227,7 +223,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm4-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
