--- a/pvannuity/pvannuity-3.html
+++ b/pvannuity/pvannuity-3.html
@@ -10,60 +10,65 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 4: Annuities</title>
+    <title>TVM Annuities</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        
 
-            <!----------------  SLIDE 6 - Content ****************** -->
-            <div id="slide6" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: Annuities</h2>
-                        <h3 class="secondary-title">Present Value of Annuities (PVA)</h3>
-                    </div>
+
+        <!----------------  SLIDE 6 - Content ****************** -->
+        <div id="slide6" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
+                    <!-- <h3 class="secondary-title">Introduction</h3> -->
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>The Present Value of Annuities (PVA) answers the question:
-                                <div class="question">How much would I pay today for a stream of cash flows over a finite period of time at a specific interest rate?</div>
-                            </p>
-                            <p>Finding the Present Value is know as discounting, and its the reverse of compounding.</p>
-                            <p>Before finding PVA, you might find it helpful to review how to calculate PV (discount) using the basic TVM formula.</p>
-                            <p class="question">What is the present value an amount that will be worth $100 in 3 years that accrues 10% annual interest.
-                                <div class="bottom-space">
-                                    <img src="./images/pv-timeline.png" class="img-fluid " alt="">
-                                </div>
-                            </p>
-                            <p>Let's use the basic TVM equation to show the math calculation for PV:
-                                <div class="bottom-space">
-                                    <img src="./images/tvm4_pv_example.png" class="img-fluid " alt="">
-                                </div>
-                            </p>
-                            <p>Using your financial calculator, you would find:
-                                <div class="bottom-space">
-                                    <img src="./images/tvm4_pv_example_finc_calc.png" class="img-fluid " alt="">
-                                </div>
-                                Note that PV and FV are always opposite signs(+/-). In this example, PV is negative because we are paying out money in the present to receive money in the future.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn">Back</button>
-                        <button type="button" class="continue btn">Continue</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">6</div>
+            </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>The Present Value of Annuities (PVA) answers the question:
+                            <div class="question">How much would I pay today for a stream of cash flows over a finite period of time at a specific interest rate?</div>
+                        </p>
+                        <p>Finding the Present Value is know as discounting, and its the reverse of compounding.</p>
+                        <p>Before finding PVA, you might find it helpful to review how to calculate PV (discount) using the basic TVM formula.</p>
+                        <p class="question">What is the present value an amount that will be worth $100 in 3 years that accrues 10% annual interest.
+                            <div class="bottom-space">
+                                <img src="./images/pv-timeline.png" class="img-fluid " alt="">
+                            </div>
+                        </p>
+                        <p>Let's use the basic TVM equation to show the math calculation for PV:
+                            <div class="bottom-space">
+                                <img src="./images/tvm4_pv_example.png" class="img-fluid " alt="">
+                            </div>
+                        </p>
+                        <p>Using your financial calculator, you would find:
+                            <div class="bottom-space">
+                                <img src="./images/tvm4_pv_example_finc_calc.png" class="img-fluid " alt="">
+                            </div>
+                            Note that PV and FV are always opposite signs(+/-). In this example, PV is negative because we are paying out money in the present to receive money in the future.
+                        </p>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number"></div>
+                </div>
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <a type="button" class="btn" href="./pvannuity-2.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-4.html">Continue</a>
+                </div>
+            </div>
+
+        </div>
 
 
     </div> <!--  end of container -->
@@ -74,7 +79,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm4-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
