--- a/pvannuity/pvannuity-30.html
+++ b/pvannuity/pvannuity-30.html
@@ -10,20 +10,20 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 4: Annuities</title>
+    <title>TVM Annuities</title>
 </head>
 
 <body>
     <div class="container-fluid">
 
-      
+
 
         <!---------------- SLIDE 46  - EXERCISES -->
         <!-- exercises4-slide24 : problem 12  -->
         <div id="exercises4-slide24" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: Annuities</h2>
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
                     <!-- <h3 class="secondary-title">Exercises</h3> -->
                 </div>
             </div>
@@ -61,15 +61,11 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="back btn">Back</button>
-                    <button type="button" class="continue btn">Continue</button>
+                    <a type="button" class="btn" href="./pvannuity-1.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-1">
-                    <div class="page-number">46</div>
-                </div>
-            </div>
+
         </div>
 
 
@@ -79,7 +75,7 @@
         <div id="exercises4-slide25" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: Annuities</h2>
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
                     <!-- <h3 class="secondary-title">Exercises</h3> -->
                 </div>
             </div>
@@ -101,15 +97,11 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="back btn">Back</button>
-                    <button type="button" class="continue btn">Continue</button>
+                    <a type="button" class="btn" href="./pvannuity-1.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-1">
-                    <div class="page-number">47</div>
-                </div>
-            </div>
+
         </div>
 
 
@@ -122,7 +114,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm4-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
