--- a/pvannuity/pvannuity-9.html
+++ b/pvannuity/pvannuity-9.html
@@ -10,52 +10,56 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 4: Annuities</title>
+    <title>TVM Annuities</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        
 
-            <!---------------- SLIDE 10 - CONTENT *********** -->
-            <div id="slide10" class="slide stop">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: Annuities</h2>
-                        <h3 class="secondary-title">Present Value of Annuities (PVA)</h3>
-                    </div>
+
+        <!---------------- SLIDE 10 - CONTENT *********** -->
+        <div id="slide10" class="slide stop">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
+                    <!-- <h3 class="secondary-title">Introduction</h3> -->
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>A PVA Factor table can also be used to find PVA. The PVA Factor replaces the number within the brackets.<br>
-                                <img src="./images/tvm4_pva_factor.png" class="img-fluid " alt=""></p>
-                            <p>Locate the intersection of the n (at left) and i (at top) to find the PVA Factor. Then multiply the PVA Factor by CF to calculate PVA.</p>
-                            <div class="row">
-                                <div class="col-12 col-sm-12 col-md-6">
-                                    <img src="./images/tvm4_pva_factor_table.jpg" class="img-fluid " alt="">
-                                </div>
-                                <div class="col-12 col-sm-12 col-md-6">
-                                    <br>
-                                    <img src="./images/tvm4_pva_factor_calculation.png" class="img-fluid " alt="">
-                                </div>
+            </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>A PVA Factor table can also be used to find PVA. The PVA Factor replaces the number within the brackets.<br>
+                            <img src="./images/tvm4_pva_factor.png" class="img-fluid " alt=""></p>
+                        <p>Locate the intersection of the n (at left) and i (at top) to find the PVA Factor. Then multiply the PVA Factor by CF to calculate PVA.</p>
+                        <div class="row">
+                            <div class="col-12 col-sm-12 col-md-6">
+                                <img src="./images/tvm4_pva_factor_table.jpg" class="img-fluid " alt="">
+                            </div>
+                            <div class="col-12 col-sm-12 col-md-6">
+                                <br>
+                                <img src="./images/tvm4_pva_factor_calculation.png" class="img-fluid " alt="">
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn">Back</button>
-                        <button type="button" class="continue btn">Continue</button>
-                    </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">10</div>
                 </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">10</div>
-                    </div>
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <a type="button" class="btn" href="./pvannuity-1.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
+        </div>
 
 
     </div> <!--  end of container -->
@@ -66,7 +70,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm4-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
