--- a/pvannuity/pvannuity-10.html
+++ b/pvannuity/pvannuity-10.html
@@ -10,42 +10,46 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 4: Annuities</title>
+    <title>TVM Annuities</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        
-            <!---------------- SLIDE 11 - CONTENT -->
-            <div id="slide11" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: Annuities</h2>
-                        <h3 class="secondary-title">Present Value of Annuities (PVA)</h3>
-                    </div>
+
+        <!---------------- SLIDE 11 - CONTENT -->
+        <div id="slide11" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
+                    <!-- <h3 class="secondary-title">Introduction</h3> -->
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>You should also know how to use the TVM buttons on your financial calculators to find PVA:<br>
-                                <img src="./images/tvm4_pva_example1_finc_calc.png" class="img-fluid " alt=""></p>
-                            <p>FV is 0 because, though there are regularly scheduled payments, there is no lump sum paid at the end of 3 years. If there were a lump sum paid at the end of the term, it would be positive because, as usual, PV and FV are opposite signs (+/-).</p>
-                            <p class="note">Always make sure your financial calculator is on the END mode. This is the most cmomon mistake made on exams.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn">Back</button>
-                        <button type="button" class="continue btn">Continue</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">11</div>
+            </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>You should also know how to use the TVM buttons on your financial calculators to find PVA:<br>
+                            <img src="./images/tvm4_pva_example1_finc_calc.png" class="img-fluid " alt=""></p>
+                        <p>FV is 0 because, though there are regularly scheduled payments, there is no lump sum paid at the end of 3 years. If there were a lump sum paid at the end of the term, it would be positive because, as usual, PV and FV are opposite signs (+/-).</p>
+                        <p class="note">Always make sure your financial calculator is on the END mode. This is the most cmomon mistake made on exams.</p>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">11</div>
+                </div>
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <a type="button" class="btn" href="./pvannuity-1.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
+                </div>
+            </div>
+        </div>
 
 
     </div> <!--  end of container -->
@@ -56,7 +60,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm4-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
