--- a/pvannuity/pvannuity-11.html
+++ b/pvannuity/pvannuity-11.html
@@ -10,49 +10,53 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 4: Annuities</title>
+    <title>TVM Annuities</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        
 
-            <!---------------- SLIDE 12 - CONTENT -->
-            <div id="slide12" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: Annuities</h2>
-                        <h3 class="secondary-title">Present Value of Annuities (PVA)</h3>
-                    </div>
+
+        <!---------------- SLIDE 12 - CONTENT -->
+        <div id="slide12" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
+                    <!-- <h3 class="secondary-title">Introduction</h3> -->
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>We have now covered four ways to calculate PVA:
-                                <ul>
-                                    <li>Summing the PV of individual payments, found by using the basic TVM equation</li>
-                                    <li>Use the PVA formula</li>
-                                    <li>Find the FVA Factor and multiply it by CF</li>
-                                    <li>Use the TVM buttons on your financial calculator</li>
-                                </ul>
-                            </p>
-                            <p>You should practice all methods. The formulas are useful when working with spreadsheets and for applying the TVM concept to other ideas. The financial calculator is extremely useful when solving for i (to avoid more complicated algebra). If you have uneven cash flows, the basic TVM equation is a necessity.</p>
-                            <p>Practice problems using all the methods, both to keep the methods fresh in your mind and to check your work.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn">Back</button>
-                        <button type="button" class="continue btn">Continue</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">12</div>
+            </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>We have now covered four ways to calculate PVA:
+                            <ul>
+                                <li>Summing the PV of individual payments, found by using the basic TVM equation</li>
+                                <li>Use the PVA formula</li>
+                                <li>Find the FVA Factor and multiply it by CF</li>
+                                <li>Use the TVM buttons on your financial calculator</li>
+                            </ul>
+                        </p>
+                        <p>You should practice all methods. The formulas are useful when working with spreadsheets and for applying the TVM concept to other ideas. The financial calculator is extremely useful when solving for i (to avoid more complicated algebra). If you have uneven cash flows, the basic TVM equation is a necessity.</p>
+                        <p>Practice problems using all the methods, both to keep the methods fresh in your mind and to check your work.</p>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">12</div>
+                </div>
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <a type="button" class="btn" href="./pvannuity-1.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
+                </div>
+            </div>
+        </div>
 
 
     </div> <!--  end of container -->
@@ -63,7 +67,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm4-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
