--- a/pvannuity/pvannuity-12.html
+++ b/pvannuity/pvannuity-12.html
@@ -10,70 +10,74 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 4: Annuities</title>
+    <title>TVM Annuities</title>
 </head>
 
 <body>
     <div class="container-fluid">
-       
 
-            <!---------------- SLIDE 13 - CONTENT -->
-            <div id="slide13" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: Annuities</h2>
-                        <h3 class="secondary-title">Present Value of Annuities (PVA)</h3>
-                    </div>
+
+        <!---------------- SLIDE 13 - CONTENT -->
+        <div id="slide13" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
+                    <!-- <h3 class="secondary-title">Introduction</h3> -->
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>The PVA we just calculated is for an ordinary annuity. Remember that the difference between ordinary annuities and annuities due is the timing of payments:<br>
-                                <div class="bottom-space">
-                                    <b>Ordinary Annuity</b> - Payments are made at the end of each period<br>
-                                    <img src="./images/tvm4_ordinary_annuity_pva_time_line.png" class="img-fluid " alt=""><br>
-                                </div>
-                                <div class="bottom-space"> <b>Annuity Due</b> - Payments are made at the beginning of each period<br>
-                                    <img src="./images/tvm4_annuity_due_pva_time_line.png" class="img-fluid " alt="">
-                                </div>
-                            </p>
-                            <p>You may remember from TVM3, when we first introduced annuities, that finding the value of an ordinary annuity and an annuity due are exactly the same except for one crucial step at the end:</p><br>
-                            <div class="math">
-                                <b>Ordinary Annuity</b>
-                                <ul>
-                                    <li>Calculate the PV using the PVA equation<br>
-                                        <img src="./images/pva_general_equation.png" class="img-fluid " alt=""></li>
-                                </ul>
+            </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>The PVA we just calculated is for an ordinary annuity. Remember that the difference between ordinary annuities and annuities due is the timing of payments:<br>
+                            <div class="bottom-space">
+                                <b>Ordinary Annuity</b> - Payments are made at the end of each period<br>
+                                <img src="./images/tvm4_ordinary_annuity_pva_time_line.png" class="img-fluid " alt=""><br>
                             </div>
-                            <br>
-                            <div class="math">
-                                <b>Annuity Due</b>
-                                <ul>
-                                    <li>Calculate the PV using the PVA equation<br>
-                                        <img src="./images/pva_general_equation.png" class="img-fluid " alt=""></li>
-                                    <li>Add an extra period of interest to the PVA amount using the PV equation.<br>
-                                        <img src="./images/tvm_sample_equation.png" class="img-fluid " alt=""><br>where PV = PVA</li>
-                                </ul>
+                            <div class="bottom-space"> <b>Annuity Due</b> - Payments are made at the beginning of each period<br>
+                                <img src="./images/tvm4_annuity_due_pva_time_line.png" class="img-fluid " alt="">
                             </div>
-                            <p>Let's calculate the PVA of an annuity due.</p>
-                            <p class="question">What's the PV of an annuity due that pays $100 per year for 3 years at 10% interest?</p>
-                            <p>Hint: We already know that as an ordinary annuity, the PVA is $248.69.</p>
-                            <p>Calculate the problem; when you have the answer, click Continue.</p>
+                        </p>
+                        <p>You may remember from TVM3, when we first introduced annuities, that finding the value of an ordinary annuity and an annuity due are exactly the same except for one crucial step at the end:</p><br>
+                        <div class="math">
+                            <b>Ordinary Annuity</b>
+                            <ul>
+                                <li>Calculate the PV using the PVA equation<br>
+                                    <img src="./images/pva_general_equation.png" class="img-fluid " alt=""></li>
+                            </ul>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn">Back</button>
-                        <button type="button" class="continue btn">Continue</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">13</div>
+                        <br>
+                        <div class="math">
+                            <b>Annuity Due</b>
+                            <ul>
+                                <li>Calculate the PV using the PVA equation<br>
+                                    <img src="./images/pva_general_equation.png" class="img-fluid " alt=""></li>
+                                <li>Add an extra period of interest to the PVA amount using the PV equation.<br>
+                                    <img src="./images/tvm_sample_equation.png" class="img-fluid " alt=""><br>where PV = PVA</li>
+                            </ul>
+                        </div>
+                        <p>Let's calculate the PVA of an annuity due.</p>
+                        <p class="question">What's the PV of an annuity due that pays $100 per year for 3 years at 10% interest?</p>
+                        <p>Hint: We already know that as an ordinary annuity, the PVA is $248.69.</p>
+                        <p>Calculate the problem; when you have the answer, click Continue.</p>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">13</div>
+                </div>
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <a type="button" class="btn" href="./pvannuity-1.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
+                </div>
+            </div>
+        </div>
 
 
     </div> <!--  end of container -->
@@ -84,7 +88,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm4-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
