--- a/pvannuity/pvannuity-13.html
+++ b/pvannuity/pvannuity-13.html
@@ -10,52 +10,53 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 4: Annuities</title>
+    <title>TVM Annuities</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        
-            <!---------------- SLIDE 14 - CONTENT -->
-            <div id="slide14" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: Annuities</h2>
-                        <h3 class="secondary-title">Present Value of Annuities (PVA)</h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p class="question">What's the PV of an annuity due that pays $100 per year for 3 years at 10% interest?</p>
-                            <p class="answer">The answer is:<br>
-                                <img src="./images/tvm4_pva_annuity_due_answer.png" class="img-fluid " alt=""></p>
-                            <p>Since we knew the PVA of the ordinary annuity, we just needed to add an extra period of interest using the general form of the TVM equation:<br>
-                                <div class="row">
-                                    <div class="col-12 col-sm-12 col-md-6">
-                                        <img src="./images/tvm4_annuity_due_pva_time_line.png" class="img-fluid " alt="">
-                                    </div><br>
-                                    <div class="col-12 col-sm-12 col-md-6"><img src="./images/tvm4_pva_annuity_due_calculation.png" class="img-fluid " alt=""></div>
-                            </p>
-                        </div>
-                    </div>
+
+        <!---------------- SLIDE 14 - CONTENT -->
+        <div id="slide14" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
+                    <!-- <h3 class="secondary-title">Introduction</h3> -->
                 </div>
             </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
             <div class="row">
-                <div class="col-1">
-                    <div class="page-number"></div>
-                </div>
-                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="back btn">Back</button>
-                    <button type="button" class="continue btn">Continue</button>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1">
-                    <div class="page-number">14</div>
+                <div class="col-12">
+                    <div class="content">
+                        <p class="question">What's the PV of an annuity due that pays $100 per year for 3 years at 10% interest?</p>
+                        <p class="answer">The answer is:<br>
+                            <img src="./images/tvm4_pva_annuity_due_answer.png" class="img-fluid " alt=""></p>
+                        <p>Since we knew the PVA of the ordinary annuity, we just needed to add an extra period of interest using the general form of the TVM equation:<br>
+                            <div class="row">
+                                <div class="col-12 col-sm-12 col-md-6">
+                                    <img src="./images/tvm4_annuity_due_pva_time_line.png" class="img-fluid " alt="">
+                                </div><br>
+                                <div class="col-12 col-sm-12 col-md-6"><img src="./images/tvm4_pva_annuity_due_calculation.png" class="img-fluid " alt=""></div>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-1">
+                <div class="page-number"></div>
+            </div>
+            <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                <button type="button" class="btn">Back</button>
+                <button type="button" class="btn">Continue</button>
+            </div>
+        </div>
+    </div>
 
 
 
@@ -67,7 +68,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm4-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
