--- a/pvannuity/pvannuity-15.html
+++ b/pvannuity/pvannuity-15.html
@@ -10,21 +10,27 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 4: Annuities</title>
+    <title>TVM Annuities</title>
 </head>
 
 <body>
     <div class="container-fluid">
-       
+
 
         <!---------------- SLIDE 16  - CONTENT -->
         <div id="slide16" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: Annuities</h2>
-                    <h3 class="secondary-title">Present Value of Annuities (PVA)</h3>
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
+                    <!-- <h3 class="secondary-title">Introduction</h3> -->
                 </div>
             </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
@@ -47,11 +53,7 @@
                     <button type="button" class="skip btn">Continue</button>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-1">
-                    <div class="page-number">16</div>
-                </div>
-            </div>
+
         </div>
 
 
@@ -63,7 +65,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm4-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
