--- a/pvannuity/pvannuity-4.html
+++ b/pvannuity/pvannuity-4.html
@@ -10,69 +10,74 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 4: Annuities</title>
+    <title>TVM Annuities</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        
 
-            <!---------------- SLIDE 7 - content ******************* -->
-            <div id="slide7" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: Annuities</h2>
-                        <h3 class="secondary-title">Present Value of Annuities (PVA)</h3>
-                    </div>
+
+        <!---------------- SLIDE 7 - content ******************* -->
+        <div id="slide7" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
+                    <!-- <h3 class="secondary-title">Introduction</h3> -->
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>We can also use the TVM formula to find the PV of an annuity by adding the PV of each individual cash flow.
-                                <div class="bottom-space">
-                                    <img src="./images/tvm_sample_equation.png" class="img-fluid " alt="">
-                                </div>
-                            </p>
-                            <p class="question">What's the PV of an ordinary annuity that pays $100 per year for 3 years at 10% interest?</p>
+            </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>We can also use the TVM formula to find the PV of an annuity by adding the PV of each individual cash flow.
                             <div class="bottom-space">
-                                <img src="./images/pv_ordinary_annuity_timeline.png" class="img-fluid" alt=""><br>
+                                <img src="./images/tvm_sample_equation.png" class="img-fluid " alt="">
                             </div>
-                            <p>First, calculate the PV of each of the 3 payments separately.
-                                <div class="row bottom-space">
-                                    <div class="col-12 col-sm-12 col-md-4">
-                                        <p><b>PV of Payment 1</b>
-                                            <img src="./images/pv_ordinary_annuity_pmt1.png" class="img-fluid " alt=""></p>
-                                    </div>
-                                    <div class="col-12 col-sm-12 col-md-4">
-                                        <p><b>PV of Payment 2</b>
-                                            <img src="./images/pv_ordinary_annuity_pmt2.png" class="img-fluid " alt=""></p>
-                                    </div>
-                                    <div class="col-12 col-sm-12 col-md-4">
-                                        <p><b>PV of Payment 3</b>
-                                            <img src="./images/pv_ordinary_annuity_pmt3.png" class="img-fluid " alt=""></p>
-                                    </div>
-                                </div>
-                                <br>
-                                <p>Then add the 3 payments together to get the PV of the annuity.</p>
-                                <div class="bottom-space">
-                                    <img src="./images/pva_equals_sum_of_pv.png" class="img-fluid" alt="">
-                                </div>
-                            </p>
+                        </p>
+                        <p class="question">What's the PV of an ordinary annuity that pays $100 per year for 3 years at 10% interest?</p>
+                        <div class="bottom-space">
+                            <img src="./images/pv_ordinary_annuity_timeline.png" class="img-fluid" alt=""><br>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn">Back</a>
-                            <button type="button" class="continue btn">Continue</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">7</div>
+                        <p>First, calculate the PV of each of the 3 payments separately.
+                            <div class="row bottom-space">
+                                <div class="col-12 col-sm-12 col-md-4">
+                                    <p><b>PV of Payment 1</b>
+                                        <img src="./images/pv_ordinary_annuity_pmt1.png" class="img-fluid " alt=""></p>
+                                </div>
+                                <div class="col-12 col-sm-12 col-md-4">
+                                    <p><b>PV of Payment 2</b>
+                                        <img src="./images/pv_ordinary_annuity_pmt2.png" class="img-fluid " alt=""></p>
+                                </div>
+                                <div class="col-12 col-sm-12 col-md-4">
+                                    <p><b>PV of Payment 3</b>
+                                        <img src="./images/pv_ordinary_annuity_pmt3.png" class="img-fluid " alt=""></p>
+                                </div>
+                            </div>
+                            <br>
+                            <p>Then add the 3 payments together to get the PV of the annuity.</p>
+                            <div class="bottom-space">
+                                <img src="./images/pva_equals_sum_of_pv.png" class="img-fluid" alt="">
+                            </div>
+                        </p>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">7</div>
+                </div>
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <a type="button" class="btn" href="./pvannuity-3.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-5.html">Continue</a>
+                </div>
+            </div>
+
+        </div>
 
 
 
@@ -85,7 +90,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm4-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
