--- a/pvannuity/pvannuity-5.html
+++ b/pvannuity/pvannuity-5.html
@@ -10,51 +10,55 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 4: Annuities</title>
+    <title>TVM Annuities</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        
 
 
-            <!---------------- SLIDE 8 - CONTENT *********** -->
-            <div id="slide8" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: Annuities</h2>
-                        <h3 class="secondary-title">Present Value of Annuities (PVA)</h3>
-                    </div>
+
+        <!---------------- SLIDE 8 - CONTENT *********** -->
+        <div id="slide8" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: Present Value of Annuities</h2>
+                    <!-- <h3 class="secondary-title">Introduction</h3> -->
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>The method of calculating the PV of individual payments and summing them to find the Present Value of an Annuity (PVA) does work.</p>
-                            <p>However, could you imagine calculating the PVA of an annuity with hundreds of payments? The process would be both tedious and present many opportunities to make rounding or calculation errors.</p>
-                            <p>Instead, we'll use a PVA equation (that can be derived from the basic form of the TVM equation):
-                                <div class="bottom-space">
-                                    <img src="./images/pva_general_equation.png" class="img-fluid " alt="">
-                                </div>
-                            </p>
-                            <p>Remember when applying the PVA equation that annuities pay a specific number of equally-sized payments at regularly scheduled intervals. Let's try the same problem again, this time using the PVA equation.
-                            </p>
-                            <p class="question">What's the PV of an ordinary annuity that pays $100 per year for 3 years at 10% interest?</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <!-- to help 1 -->
-                        <button type="button" class="continue help btn">Help</button>
-                        <button type="button" class="skip btn">Continue</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">8</div>
+            </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>The method of calculating the PV of individual payments and summing them to find the Present Value of an Annuity (PVA) does work.</p>
+                        <p>However, could you imagine calculating the PVA of an annuity with hundreds of payments? The process would be both tedious and present many opportunities to make rounding or calculation errors.</p>
+                        <p>Instead, we'll use a PVA equation (that can be derived from the basic form of the TVM equation):
+                            <div class="bottom-space">
+                                <img src="./images/pva_general_equation.png" class="img-fluid " alt="">
+                            </div>
+                        </p>
+                        <p>Remember when applying the PVA equation that annuities pay a specific number of equally-sized payments at regularly scheduled intervals. Let's try the same problem again, this time using the PVA equation.
+                        </p>
+                        <p class="question">What's the PV of an ordinary annuity that pays $100 per year for 3 years at 10% interest?</p>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">8</div>
+                </div>
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <a type="button" class="btn" href="./pvannuity-2.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-4.html">Continue</a>
+                </div>
+            </div>
+
+        </div>
 
     </div> <!--  end of container -->
 
@@ -64,7 +68,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm4-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
